# newt-fastapi-cli

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
.github/scripts/: ActTestReleaseWorkflow.sh
.github/workflows/: auto-release.yml  release.yml
newt/: main.py  version.py
newt/commands/config/: __init__.py  init.py
newt/commands/make/: route.py
newt/commands/migrate/: init.py
newt/config/: __init__.py
vapor/: main.py  version.py
vapor/commands/config/: __init__.py  init.py
vapor/commands/make/: __init__.py  route.py
vapor/commands/migrate/: __init__.py  down.py  init.py  make.py  up.py
vapor/config/: __init__.py
vapor/make/: route.py
