[project]
name = "vapor"
version = "0.2.0"
description = ""
authors = [
    {name = "ChristianANoeddeboe",email = "angercraft@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer (>=0.15.1,<0.16.0)"
]

[project.scripts]
vapor = "vapor.main:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
