[tool.poetry]
name = "newt"
version = "0.1.2"
description = ""
authors = ["ChristianANoeddeboe <angercraft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
typer = ">=0.15.1,<0.16.0"

[tool.poetry.scripts]
newt = "newt.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
